--- a/{{cookiecutter.project_slug}}/docker-compose.deploy.networks.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.deploy.networks.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: "3.3"
 services:
   pgadmin:
     networks:
@@ -14,5 +14,5 @@ services:
       - default
 
 networks:
-  {{cookiecutter.traefik_public_network}}:
+  { { cookiecutter.traefik_public_network } }:
     external: true
