--- a/{{cookiecutter.project_slug}}/docker-compose.dev.networks.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.dev.networks.yml
@@ -1,7 +1,7 @@
-version: '3.3'
+version: "3.3"
 services:
   backend:
-    networks: 
-      default: 
-        aliases: 
+    networks:
+      default:
+        aliases:
           - ${DOMAIN}
