--- a/{{cookiecutter.project_slug}}/docker-compose.shared.depends.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.shared.depends.yml
@@ -1,9 +1,9 @@
-version: '3.3'
+version: "3.3"
 services:
   backend:
-    depends_on: 
+    depends_on:
       - db
   celeryworker:
-    depends_on: 
+    depends_on:
       - db
       - queue
