Correct traefik-public network name
Prettier was adding spaces among the curly braces in the traefik-public
network name {{cookiecutter.traefik_public_network}}, because it was an
unquoted YAML key. This prevented cookiecutter from properly parsing it.

This commit will add a prettier-ignore line.
https://prettier.io/docs/en/ignore.html

--- a/{{cookiecutter.project_slug}}/docker-compose.deploy.networks.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.deploy.networks.yml
@@ -14,5 +14,6 @@ services:
       - default
 
 networks:
-  { { cookiecutter.traefik_public_network } }:
+  # prettier-ignore
+  {{cookiecutter.traefik_public_network}}:
     external: true
